Fix some missing links

--- a/static/vsreport.html
+++ b/static/vsreport.html
@@ -66,7 +66,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <p><a href="http://gshower.net">gshower.net</a> itself does not have any ports open, nor returns any packets.</p>
 <p>The registrant is Hwang Ji Woong, on behalf of VisualShower Corp., whose email is <a href="mailto:jwhwang@visualshower.com">jwhwang@visualshower.com</a>.</p>
 <p>There are no stored results in the <a href="https://web.archive.org">Internet Archive</a>.</p>
-<h2 id="btba-prd.gshower.net"><a href="btba-prd.gshower.net" class="uri">btba-prd.gshower.net</a></h2>
+<h2 id="btba-prd.gshower.net"><a href="http://btba-prd.gshower.net" class="uri">btba-prd.gshower.net</a></h2>
 <table>
 <thead>
 <tr class="header">
