Fix up accessibility issues (surely there are more)

--- a/static/parnell.html
+++ b/static/parnell.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8" />
 	<title>Parnell Ticketing</title>
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div class="session" id="sliderbar">
-			<h2>Hour: <label id="active-hour">12PM</label></h2>
+			<h2>Hour: <label for="slider" id="active-hour">12PM</label></h2>
 			<input id="slider" class="row" type="range" min="0" max="23" step="1" value="12" autocomplete="off" />
 		</div>
 		<div class="session">
