--- a/static/parnell.html
+++ b/static/parnell.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8" />
 	<title>Parnell Ticketing</title>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-	<script src="https://api.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.js"></script>
-	<link href="https://api.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.css" rel="stylesheet" />
-	<link href="css/parnell.css" rel="stylesheet" />
+	<script src="/js/mapbox-gl.js"></script>
+	<link href="/css/mapbox-gl.css" rel="stylesheet" />
+	<link href="/css/parnell.css" rel="stylesheet" />
 </head>
 <body>
 	<div id="map"></div>
