Add categories and debug pages

--- a/content/project-src/parnell/index.html
+++ b/content/project-src/parnell/index.html
@@ -1,6 +1,7 @@
 ---
 title: "Parnell"
 slug: "parnell"
+category: "project-src"
 includes_js: true
 extra_js:
   - "https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js"
