Complete backfilling of tags

--- a/content/project-src/parnell/index.html
+++ b/content/project-src/parnell/index.html
@@ -8,6 +8,9 @@ extra_js:
 includes_css: true
 extra_css:
   - "https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css"
+tags:
+- "projects"
+- "sourcecode"
 ---
 
 <div id="map"></div>
