Add descriptions for all question entries

--- a/content/experiments/requester-window/index.html
+++ b/content/experiments/requester-window/index.html
@@ -2,6 +2,7 @@
 title: "Requester window"
 slug: "requester-window"
 category: "experiments"
+description: "Sometimes to cool to load up my website on embedded devices and see what falls out of the browser"
 tags:
 - "experiments"
 - "hugo"
