Add descriptions for everything except most blog posts

--- a/content/project-src/parnell/index.html
+++ b/content/project-src/parnell/index.html
@@ -1,6 +1,7 @@
 ---
 title: "Parnell"
 slug: "parnell"
+description: "An interactive visualisation showing parking tickets issued in Parnell, Auckland, New Zealand"
 category: "project-src"
 includes_js: true
 extra_js:
