Fix requester window experiment syntax

--- a/content/experiments/requester-window/index.html
+++ b/content/experiments/requester-window/index.html
@@ -11,7 +11,7 @@ tags:
 
 <p>This experiment prints out the contents of the <code>window</code> variable for anyone requesting this page.</p>
   
-<p></p>It's a tool for myself so I can pop up my website on embedded devices and see what they surface.</p>
+<p>It's a tool for myself so I can pop up my website on embedded devices and see what they surface.</p>
 
 <div id="environment"></div>
 
